# reqwest-builder

./: .gitignore  Cargo.toml  README.md
docs/: MODULES.md
examples/: derive_demo.rs  error_handling.rs  modular_demo.rs  simple_derive_test.rs
reqwest-builder-derive/: Cargo.toml  README.md
reqwest-builder-derive/src/: lib.rs  tests.rs
src/: errors.rs  file_upload.rs  lib.rs  serialization.rs  tests.rs  trait_impl.rs  types.rs
tests/: mod.rs  reqwest_builder.rs  reqwest_builder_derive.rs
