[package]
name = "reqwest-builder"
version = "0.1.0"
edition = "2024"
authors = ["Mateus Barbosa <barbosamat16@gmail.com>"]
description = "A builder for reqwest requests with support for custom headers, query parameters, and body content."
readme = "README.md"
repository = "https://github.com/FrostPrice/reqwest-builder"
license = "MIT"
keywords = ["reqwest", "http", "builder"]
categories = ["web-programming::http-client", "network-programming"]

[dependencies]
http = "1.3.1"
mime_guess = "2.0.5"
reqwest = "0.12.22"
reqwest-middleware = { version = "0.4.2", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
