[package]
name = "reqwest-builder"
version = "0.2.4"
edition = "2024"
authors = ["Mateus Barbosa <barbosamat16@gmail.com>"]
description = "A builder for reqwest requests with support for custom headers, query parameters, and body content."
readme = "README.md"
repository = "https://github.com/FrostPrice/reqwest-builder"
license = "MIT"
keywords = ["reqwest", "http", "builder"]
categories = ["web-programming::http-client", "network-programming"]

[features]
default = []
full = ["derive"]
derive = ["dep:reqwest-builder-derive"]

[dependencies]
http = "1.3.1"
mime_guess = "2.0.5"
reqwest = "0.12.22"
reqwest-middleware = { version = "0.4.2", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"

# Derive macro support
reqwest-builder-derive = { path = "./reqwest-builder-derive", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "simple_derive_test"
path = "examples/simple_derive_test.rs"
required-features = ["derive"]

[[example]]
name = "derive_demo"
path = "examples/derive_demo.rs"
required-features = ["derive"]
